<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/deepBlack"
        android:src="@drawable/lightmode"
        android:paddingEnd="5dp"
        tools:ignore="ContentDescription,RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/showPassword"
            android:layout_width="309dp"
            android:layout_height="70dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="37dp"
            app:cardBackgroundColor="@color/lightBlack"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="33dp"
                    android:layout_weight="0.8"
                    android:text="@string/placeholder"
                    android:textColor="#9E9E9E"
                    android:layout_gravity="center"/>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="0.2"
                    android:background="@color/lightBlack"
                    android:contentDescription="@string/ImagebtnDescription"
                    android:src="@drawable/copier"
                    tools:ignore="ImageContrastCheck" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>



 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >

     <androidx.cardview.widget.CardView
         android:id="@+id/showContent"
         android:layout_width="309dp"
         android:layout_height="384dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="37dp"
         app:cardBackgroundColor="@color/lightBlack"
         tools:ignore="TextSizeCheck">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">

             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/character_length"
                     android:textColor="@color/white"
                     android:textSize="15sp" />

             </LinearLayout>

             <TextView
                 android:id="@+id/numberTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:paddingEnd="13dp"
                 android:text="@string/_0"
                 android:textColor="@color/darkModeGreen"
                 android:textSize="20sp"
                 tools:ignore="RtlSymmetry" />

         </LinearLayout>

         <SeekBar
             android:id="@+id/seekBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:max="25" />


         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">

             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minWidth="48dp"
                 android:minHeight="48dp"
                 tools:ignore="DuplicateSpeakableTextCheck" />

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_weight="1"
                 android:text="@string/include_uppercase_letters"
                 android:textColor="#9E9E9E" />


         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="110dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">

             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minWidth="48dp"
                 android:minHeight="48dp" />

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_weight="1"
                 android:text="@string/include_lowercase_letters"
                 android:textColor="#9E9E9E" />


         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="140dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">

             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minWidth="48dp"
                 android:minHeight="48dp" />

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_weight="1"
                 android:text="@string/include_numbers"
                 android:textColor="#9E9E9E" />


         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="170dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">

             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minWidth="48dp"
                 android:minHeight="48dp" />

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_weight="1"
                 android:text="@string/include_symbols"
                 android:textColor="#9E9E9E" />


         </LinearLayout>


         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="240dp"

             >

             <androidx.cardview.widget.CardView
                 android:id="@+id/strength"
                 android:layout_width="271dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
                 app:cardBackgroundColor="@color/deepBlack">

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:orientation="horizontal"
                     android:weightSum="1">

                     <TextView
                         android:layout_width="-80dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginStart="20dp"
                         android:layout_weight="0.8"
                         android:paddingEnd="40dp"
                         android:text="@string/strength"
                         android:textColor="#9E9E9E"
                         android:textSize="12sp"
                         tools:ignore="InefficientWeight,RtlSymmetry" />

                     <LinearLayout
                         android:id="@+id/strength_indicator_container"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">


                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginStart="0dp"
                             android:paddingEnd="5dp"
                             android:text="@string/too_weak"
                             android:textColor="#9E9E9E"
                             android:textSize="11sp"
                             tools:ignore="RtlSymmetry" />
                     </LinearLayout>

                 </LinearLayout>

             </androidx.cardview.widget.CardView>
         </LinearLayout>

         <Button
             android:layout_width="286dp"
             android:layout_height="48dp"
             android:layout_gravity="center"
             android:layout_marginTop="140dp"
             android:background="@drawable/mybutton"
             android:fontFamily="@font/roboto"
             android:text="@string/generate_password"
             android:textColor="@color/white" />

     </androidx.cardview.widget.CardView>
 </LinearLayout>








    <Button
        android:id="@+id/myButton"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/mybutton"
        android:fontFamily="@font/roboto"
        android:text="@string/check_password_strength"
        android:drawableStart="@drawable/shield"
        android:paddingStart="15dp"
        android:onClick="navigateToNewView"
        android:textColor="@color/white"
        tools:ignore="RtlSymmetry" />


</LinearLayout>